# Bestell_Bot_Voice

./: .cursorrules  .env.example  .gitignore  README.md  Userstroies  analyze_ai_audio.py  config.py  deploy.ps1  findings.md  instructions.json  main.py  start.bat  start.sh  start_gui.sh  test.sh  test_app.py  update_server.sh
archiv/windows-client/: analyze_sip_audio.py  config.py  debug_audio.py  main.py  pyproject.toml  requirements.txt  test.bat  test_audio_to_api.py  test_catalog.py  viega_katalog.json
archiv/windows-client/catalog/: viega_catalog.py
archiv/windows-client/core/: audio_buffer.py  local_audio.py  signals.py  state.py
archiv/windows-client/sip/: __init__.py  client.py
archiv/windows-client/transcription/: __init__.py
archiv/windows-client/ui/: __init__.py  call_panel.py
catalog/: __init__.py
core/: __init__.py  controller.py  signals.py
gui/: instructions.json  main.py  requirements.txt
realtime_ai/: __init__.py  audio_handler.py  client.py  vad.py
server/: .env.example  Dockerfile  docker-compose.yml  requirements.txt  schmidt_csv_export.json  schmidt_katalog.json
server/app/: ai_client.py  catalog.py  config.py  connection_manager.py  expert_client.py  main.py  order_manager.py  product_domains.py  sip_client.py  wissen.py
server/config/: config.json  instructions_new.json
server/scraper/: __init__.py  analyze_export.py  (+37 more)
sip/: audio_bridge.py  client.py  events.py
transcription/: manager.py
ui/: audio_test_panel.py  call_panel.py  debug_panel.py  instructions_panel.py  main_window.py  order_panel.py  transcript_panel.py
(+113 files in other folders)
